# build_large_language_model

./: .gitignore  pyproject.toml
data/pre_train/: tiny_corpus.txt
data/预训练/: the-verdict.txt
demo/: demo1.py
learn/: learn_mllm.html
learn/learn_llm/后训练/: 随记.md
learn/learn_llm/预训练/: 2_处理文本数据.ipynb  4_从零开始实现一个用于文本生成的GPT模型.ipynb  5_在无标记数据集上进行预训练.ipynb
learn/learn_pytorch/: Tensor.ipynb  module.ipynb
learn_llm/预训练/: 4_从零开始实现一个用于文本生成的GPT模型.ipynb  5_在无标记数据集上进行预训练.ipynb
learn_pytorch/: Autograd.ipynb  随记.md
my_llm/: llm.py  llm_tradition.py
my_llm/强化学习/: dpo.py  grpo.py  ppo.py  ppo_train.py
my_llm/强化学习/model/Qwen2.5-0.5B-PPO/: config.json  generation_config.json  tokenizer_config.json
src/: 2_处理文本数据.ipynb
src/post_train/: README.md  download_dataset.py  eval_ab.py  infer_sft.py  train_sft.py
src/pre_train/: README.md  infer.py  infer_hf.py  modeling.py  train.py
src/qwen_zh_sft/: README.md  download_dataset.py  infer_lora.py  train_lora.py
src/qwen_zh_short_sft/: README.md  download_dataset.py  infer_lora.py  train_lora.py
src/后训练/: 随记.md
src/预训练/: 3_注意力机制.ipynb  architectures.py
