[project]
name = "build-large-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.7.0",
    "huggingface-hub>=1.7.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
